Home screen & touch-ups
Signed-off-by: Joeri Bakker <bakkerjoeri@gmail.com>

--- a/scss/layout/_view.scss
+++ b/scss/layout/_view.scss
@@ -52,4 +52,10 @@
 	.button_right {
 		line-height: $height-bottombar;
 	}
+
+	.button_center {
+		display: block;
+		margin: 0 auto;
+		line-height: $height-bottombar;
+	}
 }
