--- a/templates/conversationItem.html
+++ b/templates/conversationItem.html
@@ -5,7 +5,7 @@
 <p class="message-preview"><%- latestMessage.message %></p>
 <span class="message-timestamp"><%- latestMessage.timestamp %></span>
 
-<span class="badge badge-unread-messages is-shown">
+<span class="badge badge-unread-messages is-hidden">
 	<% if (conversation.numberOfUnreadMessages > 0) { %>
 		<%- conversation.numberOfUnreadMessages %>
 	<% } %>
