--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,9 @@
-<button class="button button_menu">Menu</button>
-<p class="instructions">Select a conversation to start chatting!</p>
+<div class="view-topbar view_home-topbar">
+	<button class="button button_menu button_left">
+		Menu
+	</button>
+</div>
+
+<div class="view-body view_home-body view_home">
+	<p class="instructions">Select a conversation to start chatting!</p>
+</div>
