--- a/scss/modules/_list.scss
+++ b/scss/modules/_list.scss
@@ -6,7 +6,9 @@
 	}
 }
 
+// Conversation list
 .conversation-item {
+	position: relative;
 	cursor: pointer;
 	overflow: hidden;
 
@@ -56,5 +58,49 @@
 				color: $color-bodyLight;
 			}
 		}
+	}
+
+	.badge {
+		position: absolute;
+		right: 0;
+		top: 0;
+		margin: 15px;
+	}
+}
+
+// Selectable users list
+.list_select-users {
+
+}
+
+.list_select-users-item {
+	.username {
+		display: block;
+		padding: $padding-medium;
+		font-size: 1.4em;
+		line-height: 1.5em;
+	}
+
+	// Image replace checkboxes
+	input[type="checkbox"] {
+		display: none;
+	}
+
+	input[type="checkbox"] + label {
+		cursor: pointer;
+		display: inline-block;
+
+		width: 100%;
+		height: 100%;
+		padding-left: 60px;
+
+		background-image: url('../images/interface/checkbox-off.png');
+		background-size: 20px;
+		background-position: left 20px center;
+		background-repeat: no-repeat;
+	}
+
+	input[type="checkbox"]:checked + label {
+		background-image: url('../images/interface/checkbox-checked.png');
 	}
 }
