--- a/style/style.css
+++ b/style/style.css
@@ -212,6 +212,12 @@ body {
 .view-bottombar .button_right {
   line-height: 60px;
 }
+/* line 56, ../scss/layout/_view.scss */
+.view-bottombar .button_center {
+  display: block;
+  margin: 0 auto;
+  line-height: 60px;
+}
 
 /* line 1, ../scss/layout/_menu.scss */
 .view_menu {
@@ -310,7 +316,7 @@ body {
   font-size: 1.6em;
 }
 
-/* line 14, ../scss/modules/_menu.scss */
+/* line 13, ../scss/modules/_menu.scss */
 .view_menu-bottombar {
   border-top: 1px #DDD solid;
 }
@@ -332,6 +338,23 @@ body {
 .view-bottombar {
   border-top: 1px #DDD solid;
   background-color: #FAFAFC;
+}
+
+/* line 1, ../scss/modules/_home.scss */
+.view_home-body {
+  display: table;
+  width: 100%;
+}
+/* line 5, ../scss/modules/_home.scss */
+.view_home-body .instructions {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 40px;
+  width: 100%;
+  color: #BBB;
+  font-size: 1.8em;
+  line-height: 1.5em;
+  text-align: center;
 }
 
 /* line 1, ../scss/modules/_chat.scss */
@@ -368,8 +391,18 @@ body {
 
 /* line 1, ../scss/modules/_message.scss */
 .message {
+  position: relative;
   padding: 10px;
   display: block;
+}
+@media screen and (min-width: 601px) {
+  /* line 7, ../scss/modules/_message.scss */
+  .message .message-sent-timestamp {
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 10px;
+  }
 }
 @media screen and (max-width: 600px) {
   /* line 1, ../scss/modules/_message.scss */
@@ -385,42 +418,42 @@ body {
     color: white;
     background-color: #4279FC;
   }
-  /* line 20, ../scss/modules/_message.scss */
+  /* line 30, ../scss/modules/_message.scss */
   .message .message-sent-by {
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
     opacity: 0.7;
   }
-  /* line 25, ../scss/modules/_message.scss */
+  /* line 35, ../scss/modules/_message.scss */
   .message.by-owner {
     float: right;
     color: inherit;
     background-color: #EFEFF9;
   }
-  /* line 31, ../scss/modules/_message.scss */
+  /* line 41, ../scss/modules/_message.scss */
   .message.by-owner .message-sent-timestamp {
     text-align: right;
   }
-  /* line 35, ../scss/modules/_message.scss */
+  /* line 45, ../scss/modules/_message.scss */
   .message.by-owner .message-sent-by {
     filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
     opacity: 1;
   }
 }
 
-/* line 42, ../scss/modules/_message.scss */
+/* line 52, ../scss/modules/_message.scss */
 .message-sent-by {
   font-size: 1.4em;
   font-weight: 600;
   line-height: 1.5em;
 }
 @media screen and (min-width: 601px) {
-  /* line 42, ../scss/modules/_message.scss */
+  /* line 52, ../scss/modules/_message.scss */
   .message-sent-by {
     color: #4279FC;
   }
 }
 
-/* line 52, ../scss/modules/_message.scss */
+/* line 62, ../scss/modules/_message.scss */
 .by-owner .message-sent-by {
   color: inherit;
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=40);
@@ -428,20 +461,20 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  /* line 57, ../scss/modules/_message.scss */
+  /* line 67, ../scss/modules/_message.scss */
   .by-owner .message-sent-by,
   .is-personal .message-sent-by {
     display: none;
   }
 }
 
-/* line 64, ../scss/modules/_message.scss */
+/* line 74, ../scss/modules/_message.scss */
 .message-body {
   font-size: 1.4em;
   line-height: 1.5em;
 }
 
-/* line 71, ../scss/modules/_message.scss */
+/* line 81, ../scss/modules/_message.scss */
 .message-sent-timestamp {
   display: block;
   font-size: 1.2em;
@@ -453,21 +486,59 @@ body {
 /* line 1, ../scss/modules/_input.scss */
 .input {
   font-size: 1.2em;
-}
-/* line 4, ../scss/modules/_input.scss */
-.input.is-hidden {
-  display: none;
-}
-
-/* line 13, ../scss/modules/_input.scss */
-.input_chat {
-  margin: 10px;
   padding: 0.8em;
-  width: calc(100% - 60px - 40px);
   border: 1px #DDD solid;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
+  -moz-transition-property: border;
+  -o-transition-property: border;
+  -webkit-transition-property: border;
+  transition-property: border;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+/* line 10, ../scss/modules/_input.scss */
+.input.is-hidden {
+  display: none;
+}
+/* line 14, ../scss/modules/_input.scss */
+.input:focus {
+  border-color: #D1685F;
+}
+
+/* line 19, ../scss/modules/_input.scss */
+.input_groupname {
+  width: 90%;
+  max-height: 100%;
+  display: block;
+  margin: 20px auto;
+  margin-bottom: 0;
+  -moz-transition-property: max-height, margin, padding, border;
+  -o-transition-property: max-height, margin, padding, border;
+  -webkit-transition-property: max-height, margin, padding, border;
+  transition-property: max-height, margin, padding, border;
+  -moz-transition-duration: 0.2s;
+  -o-transition-duration: 0.2s;
+  -webkit-transition-duration: 0.2s;
+  transition-duration: 0.2s;
+}
+/* line 30, ../scss/modules/_input.scss */
+.input_groupname.is-hidden {
+  display: block;
+  max-height: 0;
+  margin: 0 auto;
+  padding-top: 0;
+  padding-bottom: 0;
+  border: none;
+}
+
+/* line 40, ../scss/modules/_input.scss */
+.input_chat {
+  margin: 10px;
+  width: calc(100% - 60px - 40px);
 }
 
 /* line 1, ../scss/modules/_list.scss */
@@ -479,38 +550,39 @@ body {
   border-bottom: none;
 }
 
-/* line 9, ../scss/modules/_list.scss */
+/* line 10, ../scss/modules/_list.scss */
 .conversation-item {
+  position: relative;
   cursor: pointer;
   overflow: hidden;
   padding: 15px;
 }
-/* line 15, ../scss/modules/_list.scss */
+/* line 17, ../scss/modules/_list.scss */
 .conversation-item .conversation-item-name,
 .conversation-item .message-preview,
 .conversation-item .message-timestamp {
   line-height: 1.5em;
 }
-/* line 21, ../scss/modules/_list.scss */
+/* line 23, ../scss/modules/_list.scss */
 .conversation-item .conversation-item-name {
   display: block;
   font-size: 1.4em;
 }
-/* line 26, ../scss/modules/_list.scss */
+/* line 28, ../scss/modules/_list.scss */
 .conversation-item .message-preview,
 .conversation-item .message-timestamp {
   color: #BBB;
   overflow: hidden;
   white-space: nowrap;
 }
-/* line 33, ../scss/modules/_list.scss */
+/* line 35, ../scss/modules/_list.scss */
 .conversation-item .message-preview {
   float: left;
   max-width: 70%;
   font-size: 1.2em;
   text-overflow: ellipsis;
 }
-/* line 41, ../scss/modules/_list.scss */
+/* line 43, ../scss/modules/_list.scss */
 .conversation-item .message-timestamp {
   float: right;
   max-width: 30%;
@@ -518,16 +590,51 @@ body {
   text-align: right;
 }
 @media screen and (min-width: 601px) {
-  /* line 49, ../scss/modules/_list.scss */
+  /* line 51, ../scss/modules/_list.scss */
   .conversation-item.is-selected {
     background-color: #4279FC;
     color: white;
   }
-  /* line 54, ../scss/modules/_list.scss */
+  /* line 56, ../scss/modules/_list.scss */
   .conversation-item.is-selected .message-preview,
   .conversation-item.is-selected .message-timestamp {
     color: white;
   }
+}
+/* line 63, ../scss/modules/_list.scss */
+.conversation-item .badge {
+  position: absolute;
+  right: 0;
+  top: 0;
+  margin: 15px;
+}
+
+/* line 77, ../scss/modules/_list.scss */
+.list_select-users-item .username {
+  display: block;
+  padding: 20px;
+  font-size: 1.4em;
+  line-height: 1.5em;
+}
+/* line 85, ../scss/modules/_list.scss */
+.list_select-users-item input[type="checkbox"] {
+  display: none;
+}
+/* line 89, ../scss/modules/_list.scss */
+.list_select-users-item input[type="checkbox"] + label {
+  cursor: pointer;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  padding-left: 60px;
+  background-image: url("../images/interface/checkbox-off.png");
+  background-size: 20px;
+  background-position: left 20px center;
+  background-repeat: no-repeat;
+}
+/* line 103, ../scss/modules/_list.scss */
+.list_select-users-item input[type="checkbox"]:checked + label {
+  background-image: url("../images/interface/checkbox-checked.png");
 }
 
 /* line 1, ../scss/modules/_button.scss */
@@ -548,19 +655,24 @@ body {
 .button:hover, .button:focus {
   color: #EB1C24;
 }
+/* line 13, ../scss/modules/_button.scss */
+.button.is-disabled {
+  cursor: default;
+  color: #BBB;
+}
 
-/* line 14, ../scss/modules/_button.scss */
+/* line 19, ../scss/modules/_button.scss */
 .button_menu {
   display: none;
 }
 @media screen and (max-width: 600px) {
-  /* line 14, ../scss/modules/_button.scss */
+  /* line 19, ../scss/modules/_button.scss */
   .button_menu {
     display: inline;
   }
 }
 
-/* line 22, ../scss/modules/_button.scss */
+/* line 27, ../scss/modules/_button.scss */
 .button_new-conversation {
   width: 50px;
   height: 55px;
@@ -568,4 +680,20 @@ body {
   background-repeat: no-repeat;
   background-size: 50%;
   background-position: center center;
+}
+
+/* line 1, ../scss/modules/_badge.scss */
+.badge {
+  padding: 3px 7px 4px;
+  font-size: 1.2em;
+  white-space: nowrap;
+  color: white;
+  background-color: #4279FC;
+  -moz-border-radius: 200px;
+  -webkit-border-radius: 200px;
+  border-radius: 200px;
+}
+/* line 12, ../scss/modules/_badge.scss */
+.badge.is-hidden {
+  display: none;
 }
